--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <app-navbar></app-navbar>
   <app-root></app-root>
+  <app-footer></app-footer>
+  
 </body>
 </html>
